// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save Payment should fail if resultCode is not Authorised 1`] = `
Array [
  Array [
    Object {
      "error": Array [
        "mocked_error.card.information.error",
      ],
      "success": false,
    },
  ],
]
`;

exports[`Save Payment should fail if zeroAuth has error 1`] = `
Array [
  Array [
    Object {
      "error": Array [
        "mocked_error.card.information.error",
      ],
      "success": false,
    },
  ],
]
`;

exports[`Save Payment should succeed 1`] = `
Array [
  Array [
    Object {
      "redirectUrl": "[\\"PaymentInstruments-List\\"]",
      "success": true,
    },
  ],
]
`;

exports[`Save Payment should return redirectAction and succeed 1`] = `
Array [
  Array [
    Object {
      "redirectUrl": "[\\"PaymentInstruments-List\\"]",
      redirectAction: {
        paymentMethodType: "scheme",
        url: "https://checkoutshopper-test.adyen.com/checkoutshopper/threeDS2.shtml",
        data: {
            MD: "mockMD",
            PaReq: "mockPaReq",
            TermUrl: "https://checkoutshopper-test.adyen.com/checkoutshopMock"},
        method: "POST",
        type: "redirect"
      },
      "success": true,
    },
  ],
]
`;
